--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,5 +2,5 @@ FROM alpine:3.17
 
 RUN apk update \
     && apk upgrade \
-    && apk add --no-cache sudo bash git openjdk17 nodejs npm
+    && apk add --no-cache sudo bash git openjdk17 nodejs npm \
     && npm i -g typescript
