--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "tcol": "^1.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build --verbose"
   },
   "repository": {
     "type": "git",
