Got the editor to show up

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@codemirror/search": "^6.2.3",
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.7.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "codemirror": "^6.0.1",
-    "patch-package": "^6.5.1"
+    "patch-package": "^6.5.1",
+    "rollup": "^2.79.1"
   },
   "name": "csharp-codemirror",
   "description": "For school, nothing to see here- move on...",
