--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,13 @@
     "module": "es2020",
     "sourceMap": true,
     "moduleResolution": "node",
-    "strict": true
+    "strict": true,
+    "outDir": "dist",
+    "rootDir": "src",
   },
-  "include": [
-    "src/**/*"
-  ]
+  "buildOptions": {
+    "outDir": "dist",
+    "rootDir": "src",
+    "verbose": true
+  }
 }
