--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@codemirror/view": "^6.7.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "codemirror": "^6.0.1",
-    "patch-package": "^6.5.1",
+    "codemirror-console": "^3.0.4",
     "rollup": "^2.79.1"
   },
   "name": "csharp-codemirror",
@@ -19,20 +19,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "private": true,
-  "type": "module",
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@codemirror/buildhelper": "^0.1.16",
+    "@types/node": "^18.11.18",
     "babel-preset-minify": "^0.5.2",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "tcol": "^1.0.2"
   },
   "scripts": {
     "build": "tsc --build --verbose",
+    "merge": "gulp merge",
     "rollup": "rollup -c",
-    "minify": "babel ./src/bundles/editor.bundle.js --config-file ./babel.config.cjs -o ./src/bundles/editor.bundle.min.js",
-    "package": "npm run build && npm run rollup && npm run minify",
-    "dev": "npm run build && npm run rollup"
+    "minify": "babel ./src/bundles/full.rollup.bundle.js --config-file ./babel.config.cjs -o ./src/bundles/full.rollup.bundle.min.js",
+    "package": "npm run build && npm run merge && npm run rollup && npm run minify",
+    "dev": "npm run build && npm run merge && npm run rollup"
   },
   "repository": {
     "type": "git",
