--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,22 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "lib": [
+      "ES6",
+      "DOM",
+      "ScriptHost"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "mocha"
+    ],
+    "stripInternal": true,
+    "noUnusedLocals": true,
+    "newLine": "lf",
     "target": "ES6",
-    "module": "ES6",
+    "module": "ES2020",
     "sourceMap": true,
     "moduleResolution": "node",
     "strict": true,
@@ -10,6 +24,8 @@
     "rootDir": "src",
     "declaration": true,
     "declarationDir": "dist/dts",
+    "moduleDetection": "force",
+    "esModuleInterop": true,
   },
   "buildOptions": {
     "outDir": "dist",
